--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".FoodActivity"></activity>
+        <activity android:name=".BillActivity" />
         <activity android:name=".MembersActivity" />
         <activity android:name=".InfoActivity" />
         <activity android:name=".SetupActivity" />
